# gnu-apl

./: AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  README  README-1-prerequisites  README-2-configure  README-3-keyboard  README-4-compliance  README-6-porting  README-7-more-info  README-8-parallel  aclocal.m4  apl.html  apl.info  apl.texi  apl.xmodmap  config.h  config.h.in  configure  configure.ac
apl-1.0/rpm/: Makefile.am
doc/: Makefile.am  Makefile.in  apl.html  apl.info  apl.texi  libapl.html  libapl.info  libapl.texi
rpm/: Makefile.am  Makefile.in  apl.spec.in
src/APs/: AP100.cc  AP210.cc  APmain.cc  APmain.hh  APnnn.cc  APserver.cc  Makefile.am  Makefile.in  Svar_DB_server.cc  Svar_DB_server.hh
src/native/: Makefile.am  Makefile.in  file_io.cc  template.hh
src/sql/: AUTHORS  Connection.hh  LAST_GIT_PULL  Makefile.am  Makefile.in  PostgresArgListBuilder.cc  SqliteResultValue.cc  SqliteResultValue.hh  apl-sqlite.cc
src/testcases/: AAA0_Global_Settings.tc  AP100.tc  AP210.tc  APnnn.tc  APnnn_1011.sh  File_IO.tc  Makefile.am  Makefile.in  NativeFunctions.tc  Quad_CR.tc  Quad_INP.tc  UserCommand.tc
support-files/: Makefile.am  Makefile.in  apl.dyalog.xmodmap  apl.loadkeys  apl.xkm  apl.xmodmap  keyboard.txt  keyboard1.txt  keys.apl
support-files/Dirk/: Makefile.in  rules-evdev.lst  symbols-apl
support-files/Dyalog-Keyboard/: Makefile.am  Makefile.in  README  apl.xmodmap  keyboard.txt  keyboard1.txt
support-files/OS-X-Keyboard/: MacAplAlt.keylayout  Makefile.in
support-files/Unicomp-Keyboard/: Makefile.am  Makefile.in  apl.xkb.txt
support-files/WASD/: Makefile.am  Makefile.in
support-files/WASD-Keyboard/: Makefile.am  Makefile.in
support-files/old-Keyboard/: Makefile.in  apl.loadkeys  apl.xkb
tools/: APL_keyboard.cc  APL_keyboard.orig.def  APL_keyboard_show.cc  Makefile.am  Makefile.in  check_src  memory_benchmark.cc  phrase_gen.cc  phrase_gen.def  sockconst.c
trunk/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  Makefile.incl  README  README-1-prerequisites  README-2-configure  README-3-keyboard  README-4-compliance  README-5-WINDOWS  README-6-porting  README-7-more-info  aclocal.m4  apl.1  apl.html  apl.info  apl.texi  apl.vim  config.h  config.h.in  configure  configure.ac
trunk/apl-1.0/: AUTHORS  ChangeLog  README-1-prerequisites  apl.texi  config.h  keyboard
trunk/apl-1.0/debian/: apl.info  docs
trunk/apl-1.0/po/: Makefile.in.in  Makevars  apl.pot  en@quot.gmo  en@quot.po
trunk/apl-1.0/rpm/: Makefile.in
trunk/apl-1.0/src/: APL_types.hh  Archive.cc  Archive.hh  ArrayIterator.cc  Avec.def  Bif_OPER1_COMMUTE.hh  Bif_OPER1_REDUCE.cc  Bif_OPER2_PRODUCT.cc  CharCell.cc  CharCell.hh  CollatingCache.hh  Common.hh  ComplexCell.hh  DiffOut.cc  ErrorCode.hh  Executable.hh  Function.cc  IndexExpr.hh  Input.cc  Nabla.hh  NamedObject.cc  Prefix.cc  Prefix.def  PrintContext.hh  ProcessorID.cc  QuadFunction.hh  Quad_RL.cc  Quad_RL.hh  Quad_SVx.hh  RealCell.cc  StateIndicator.hh  Svar_signals.def  SymbolTable.cc  SystemVariable.def  SystemVariable.hh  TestFiles.hh  Token.cc  UserFunction.cc
trunk/apl-1.0/workspaces/: APL_CGI.apl
trunk/apl-1.0/wslib2/: Makefile.in
trunk/debian/: Makefile.am  Makefile.in  changelog  control
trunk/debian/source/: Makefile.in
trunk/doc/: Makefile.am  Makefile.in  apl.1  apl.html  apl.info  apl.texi  libapl.html
trunk/gnu-apl.d/: Makefile.am  Makefile.in  parallel_thresholds  preferences  preferences.in
trunk/m4/: ax_lib_postgresql.m4
trunk/po/: LINGUAS  apl.pot  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po
trunk/rpm/: Makefile.am  Makefile.in  apl.spec.in
trunk/src/: APL_types.hh  Archive.cc  Archive.hh  ArrayIterator.cc  Assert.cc  Assert.hh  Avec.cc  Avec.def  Avec.hh  Backtrace.cc  Backtrace.hh  Bif_F12_FORMAT.cc  Bif_F12_FORMAT.hh  Bif_F12_SORT.cc  Bif_F12_SORT.hh  Bif_OPER1_COMMUTE.cc  Bif_OPER1_COMMUTE.hh  Bif_OPER1_EACH.cc  Bif_OPER1_EACH.hh  Bif_OPER1_RANK.cc  Bif_OPER1_RANK.hh  Bif_OPER1_REDUCE.cc  Bif_OPER1_REDUCE.hh  Bif_OPER1_SCAN.cc  Bif_OPER1_SCAN.hh  Bif_OPER2_INNER.cc  Bif_OPER2_INNER.hh  Bif_OPER2_OUTER.cc  Bif_OPER2_OUTER.hh  Bif_OPER2_POWER.cc  Bif_OPER2_POWER.hh  Bif_OPER2_PRODUCT.cc  Bif_OPER2_PRODUCT.hh  Bif_OPER2_RANK.cc  Bif_OPER2_RANK.hh  CDR.cc  CDR.hh  CDR_string.hh  Cell.cc  Cell.hh  (+177 more)
trunk/src/APs/: AP210.cc  APmain.cc  APmain.hh  APnnn.cc  APserver.cc  Makefile.am  Makefile.in  Svar_DB_server.cc
trunk/src/emacs_mode/: AUTHORS  DefCommand.cc  FollowCommand.cc  LAST_GIT_PULL  Makefile.am  Makefile.in  NetworkConnection.cc  RunCommand.hh  SystemVariableCommand.cc  TraceData.cc  emacs.hh
trunk/src/native/: Makefile.am  Makefile.in  file_io.cc  template.hh  template_F0.cc  template_F12.cc  template_OP1.cc  template_OP2.cc
trunk/src/sql/: AUTHORS  Makefile.am  Makefile.in  PostgresArgListBuilder.cc  SqliteArgListBuilder.cc  SqliteProvider.cc  apl-sqlite.cc
trunk/src/testcases/: AAA0_Global_Settings.tc  AP100.tc  AP210.tc  APnnn.tc  APnnn_1011.tc2  File_IO.tc  Makefile.am  Makefile.in  Performance.pt  Quad_ARG.tc  Quad_CR.tc  Quad_INP.tc  UserCommand.tc
trunk/src/workspaces/: Makefile.in
trunk/support-files/: Makefile.am  Makefile.in  apl.dyalog.xmodmap  apl.xkb  apl.xmodmap  keyboard.dyalog.txt  keyboard1.dyalog.txt
trunk/tools/: APL_keyboard.cc  APL_keyboard.def  APL_keyboard_learn.cc  APL_keyboard_show.cc  Makefile.am  Makefile.in  apl2html.cc  memory_benchmark.cc  phrase_gen.cc  phrase_gen.def
trunk/workspaces/: APL_CGI.apl  Makefile.am  Makefile.in  SCRIPT.apl  ScalarBenchmark.apl  ScalarBenchmark_1.apl  ScalarBenchmark_2.apl
trunk/wslib1/: Makefile.in
trunk/wslib2/: Makefile.in
trunk/wslib3/: Makefile.am  Makefile.in  meta.apl
trunk/wslib4/: Makefile.in
trunk/wslib5/: FILE_IO.apl  HTML.apl  Makefile.am  Makefile.in  SQL.apl
wslib5/APLComponentFiles/: AUTHORS  CF_README.txt  ComponentFiles.apl  Makefile.am  Makefile.in  README.md  README_FIRST.txt  SQL_README.txt
wslib5/iso-apl-cf/: LAST_GIT_PULL  Makefile.am  Makefile.in  README.md  _control_.apl  _metadata_  iso_cf.apl  perf.apl  test.apl
(+391 files in other folders)
